--- a/functions/package.json
+++ b/functions/package.json
@@ -7,16 +7,21 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "web:push": "web-push"
   },
   "engines": {
     "node": "16"
   },
   "main": "index.js",
   "dependencies": {
+    "@google-cloud/storage": "1.7",
+    "busboy": "^1.2.0",
     "cors": "^2.8.5",
+    "express": "^4.17.2",
     "firebase-admin": "^9.12.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "web-push": "^3.4.5"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
